Feature: ability to build fat jar + changes in the logging engine